force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <description>Target defines what a Worker will observe and answer questions about. Targets could include Products, Categories, Displays, or any other type of Target configured for an instance. Target is related to Project Service Target and Retailer.</description>
    <label>Target</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>