force-app/main/default/objects/Target__c/fields/AccountInfo__c.field-meta.xml
<CustomField>
    <fullName>AccountInfo__c</fullName>
    <label>Account</label>
    <type>TextArea</type>
</CustomField>