force-app/main/default/objects/Target__c/fields/BrandInfo__c.field-meta.xml
<CustomField>
    <fullName>BrandInfo__c</fullName>
    <label>Brand</label>
    <type>TextArea</type>
</CustomField>