force-app/main/default/objects/Target__c/fields/CategoryInfo__c.field-meta.xml
<CustomField>
    <fullName>CategoryInfo__c</fullName>
    <label>Category</label>
    <type>TextArea</type>
</CustomField>