force-app/main/default/objects/Target__c/fields/DepartmentNumber__c.field-meta.xml
<CustomField>
    <fullName>DepartmentNumber__c</fullName>
    <label>Department Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>