force-app/main/default/objects/Target__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <description>Photo of the target</description>
    <inlineHelpText>Photo of the target</inlineHelpText>
    <label>ImageURL</label>
    <type>Url</type>
</CustomField>