force-app/main/default/objects/Target__c/fields/OneHubTargetID__c.field-meta.xml
<CustomField>
    <fullName>OneHubTargetID__c</fullName>
    <description>Target ID from Master Data Management System</description>
    <externalId>true</externalId>
    <label>One Hub Master Target ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>