force-app/main/default/objects/Target__c/fields/PackageSizeQty__c.field-meta.xml
<CustomField>
    <fullName>PackageSizeQty__c</fullName>
    <label>Yield Per Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>