force-app/main/default/objects/Target__c/fields/PackageSizeUnits__c.field-meta.xml
<CustomField>
    <fullName>PackageSizeUnits__c</fullName>
    <label>Package Size (Units)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>count</fullName>
            </value>
            <value>
                <fullName>lb</fullName>
            </value>
            <value>
                <fullName>oz</fullName>
            </value>
            <value>
                <fullName>pint</fullName>
            </value>
            <value>
                <fullName>gallon</fullName>
            </value>
            <value>
                <fullName>quart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>