force-app/main/default/objects/Target__c/fields/PLU__c.field-meta.xml
<CustomField>
    <fullName>PLU__c</fullName>
    <label>PLU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>