force-app/main/default/objects/Target__c/fields/ShelfName__c.field-meta.xml
<CustomField>
    <fullName>ShelfName__c</fullName>
    <label>Shelf Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>