force-app/main/default/objects/Target__c/fields/StockCode__c.field-meta.xml
<CustomField>
    <fullName>StockCode__c</fullName>
    <externalId>true</externalId>
    <label>Stock ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>