force-app/main/default/objects/Target__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Sam&#39;s Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>