force-app/main/default/objects/Target__c/fields/UPC__c.field-meta.xml
<CustomField>
    <fullName>UPC__c</fullName>
    <label>UPC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>