force-app/main/default/objects/Target__c/recordTypes/Brand.recordType-meta.xml
<RecordType>
    <fullName>Brand</fullName>
    <active>true</active>
    <label>Brand</label>
</RecordType>