force-app/main/default/objects/Target__c/recordTypes/Category.recordType-meta.xml
<RecordType>
    <fullName>Category</fullName>
    <active>true</active>
    <label>Category</label>
</RecordType>