force-app/main/default/objects/Target__c/recordTypes/Display.recordType-meta.xml
<RecordType>
    <fullName>Display</fullName>
    <active>false</active>
    <label>Display</label>
</RecordType>