force-app/main/default/objects/Target__c/recordTypes/ReportingOnly.recordType-meta.xml
<RecordType>
    <fullName>ReportingOnly</fullName>
    <active>true</active>
    <label>Reporting Only</label>
</RecordType>