force-app/main/default/objects/Target__c/recordTypes/Sam_s.recordType-meta.xml
<RecordType>
    <fullName>Sam_s</fullName>
    <active>true</active>
    <description>Sams Club</description>
    <label>Sams Club</label>
</RecordType>