force-app/main/default/objects/Target__c/validationRules/validate_name.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_name</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name)=0</errorConditionFormula>
    <errorMessage>Item Name cannot be empty.</errorMessage>
</ValidationRule>