force-app/main/default/objects/Target__c/validationRules/Validate_package_size_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_package_size_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(PackageSizeQty__c)</errorConditionFormula>
    <errorMessage>Invalid Package Size Qty</errorMessage>
</ValidationRule>