force-app/main/default/objects/Target__c/validationRules/Validate_PLU_or_Item_Number_not_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_PLU_or_Item_Number_not_empty</fullName>
    <active>true</active>
    <description>Ensures Item Number or UPC field are populated.</description>
    <errorConditionFormula>AND(
ISBLANK(StockCode__c),
ISBLANK(UPC__c))</errorConditionFormula>
    <errorMessage>To move forward please provide either a Stock Code or a UPC</errorMessage>
</ValidationRule>