force-app/main/default/objects/Target__c/validationRules/Validate_UPC_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_UPC_Length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(UPC__c) &gt; 0 &amp;&amp; Len(UPC__c)&lt; 12</errorConditionFormula>
    <errorMessage>UPC should be 12 digits</errorMessage>
</ValidationRule>