force-app/main/default/objects/Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>OneHubRetailerId__c</columns>
    <columns>AccountInfo__c</columns>
    <columns>BrandInfo__c</columns>
    <columns>CategoryInfo__c</columns>
    <columns>Description__c</columns>
    <columns>StockCode__c</columns>
    <columns>PackageSizeUnits__c</columns>
    <columns>Status__c</columns>
    <columns>TargetName__c</columns>
    <columns>TargetType__c</columns>
    <columns>UPC__c</columns>
    <columns>VendorNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>